--- a/views/newrequest.ejs
+++ b/views/newrequest.ejs
@@ -1,6 +1,6 @@
 <% include head %>
 
-<form name="login-form" id="login-form" method="post" action="/request/new">
+<form name="new-request-form" id="new-request-form" method="post" action="/request/new">
     <h2>Post a new request</h2>
     <label for="type">Type</label>
     <select name="type" id="type" required>
@@ -26,16 +26,22 @@
     </select>
     <label for="title">Title</label>
     <input id="title" type="text" name="title" maxlength="40" required>
-    <label for="datepicker">Date</label>
-    <input class="dateevent" id="datepicker" type="dateTime" name="dateevent">
-    <label for="price">Price</label>
-    <input id="price" type="number" size="10" name="price"> €
-    <label for="rate">Rate</label>
-    <select name="rate" id="rate">
-    	<option value="">---</option>
-    	<option value="flat">flat</option>
-    	<option value="perhour">per hour</option>
-    </select>
+    <div>
+        <label for="datepicker">Date</label>
+        <input class="dateevent" id="datepicker" type="dateTime" name="dateevent">
+    </div>
+    <div class="inline-form">
+        <label for="price">Price</label>
+        <input id="price" type="number" size="10" name="price"> €
+    </div>
+    <div class="inline-form">
+        <label for="rate">Rate</label>
+        <select name="rate" id="rate">
+        	<option value="">---</option>
+        	<option value="flat">flat</option>
+        	<option value="perhour">per hour</option>
+        </select>
+    </div>
     <label for="description">Description</label>
     <textarea name="description" id="description" rows="5" placeholder="Please provide a description of the service you are looking for" required></textarea>
     <p><input class="button" type="submit" value="Submit"></p>
